--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/home/farid/anaconda3/envs/fastai2_dev/bin/python"
+    "python.pythonPath": "C:\\Users\\fh\\.conda\\envs\\fastai2\\python.exe"
 }
