--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\fh\\.conda\\envs\\fastai2\\python.exe"
+    "python.pythonPath": "C:\\Users\\fh\\.conda\\envs\\fastai2_dev\\python.exe"
 }
