--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 # https://learnxinyminutes.com/docs/yaml/
 
 title: AI Fast Track Blog
-description: Helping to democratize AI and Deep Learning.
+description: Helping democratizing AI and Deep Learning.
 github_username: ai-fast-track
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "blog"
